RESOLVED FIXED86103
Some Spelling Mistakes Result in Compile Errors with ENABLE(FILE_SYSTEM) in LocalFileSystem.cpp
https://bugs.webkit.org/show_bug.cgi?id=86103
Summary Some Spelling Mistakes Result in Compile Errors with ENABLE(FILE_SYSTEM) in L...
Chris H-C
Reported 2012-05-10 09:18:49 PDT
As per Bug#84135, there are some compilation errors in LocalFileSystem.cpp (FileSystemSynchronousMode doesn't exist, for instance). This bug shall track their resolution.
Attachments
Patch (6.63 KB, patch)
2012-05-15 07:20 PDT, Kinuko Yasuda
rwlbuis: review+
Kinuko Yasuda
Comment 1 2012-05-15 07:20:28 PDT
Kinuko Yasuda
Comment 2 2012-05-15 07:21:19 PDT
I think this should fix build errors with ENABLE(FILE_SYSTEM) on non-chromium ports (though I couldn't test on all platforms).
Chris H-C
Comment 3 2012-05-15 07:26:39 PDT
(In reply to comment #2) > I think this should fix build errors with ENABLE(FILE_SYSTEM) on non-chromium ports (though I couldn't test on all platforms). Sorry about that. We're looking to get a BlackBerry buildbot up and running ASAP to make this less painful all around. Patch lgtm, but that's all I can do :S Adding some people from our port.
Rob Buis
Comment 4 2012-05-17 07:27:45 PDT
Comment on attachment 141962 [details] Patch Looks good, thanks for the BB fix too!
Kinuko Yasuda
Comment 5 2012-05-17 22:43:27 PDT
Note You need to log in before you can comment on or make changes to this bug.