Some Spelling Mistakes Result in Compile Errors with ENABLE(FILE_SYSTEM) in LocalFileSystem.cpp https://bugs.webkit.org/show_bug.cgi?id=86103

Reviewed by Rob Buis.

Added build fixes and some (limited) common implementation for non-chromium ports.

No new tests as this should have no functionality changes.

* Modules/filesystem/DOMFileSystemBase.cpp:
(WebCore::DOMFileSystemBase::isValidType): Added common implementation for non-chromium ports.
(WebCore::DOMFileSystemBase::crackFileSystemURL): Ditto.
(WebCore::DOMFileSystemBase::supportsToURL): Ditto.
(WebCore::DOMFileSystemBase::createFileSystemURL): Ditto.
* Modules/filesystem/LocalFileSystem.cpp:
(WebCore::LocalFileSystem::readFileSystem): Fixed.
(WebCore::LocalFileSystem::requestFileSystem): Fixed.
* platform/blackberry/AsyncFileSystemBlackBerry.cpp:
(WebCore::AsyncFileSystem::openFileSystem): Fixed.
* platform/gtk/AsyncFileSystemGtk.cpp:
(WebCore::AsyncFileSystem::openFileSystem): Fixed.

Canonical link: https://commits.webkit.org/104444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117544 268f45cc-cd09-0410-ab3c-d52691b4dbfc